# Course_work_6

./: .env.sample  .gitignore  db.json  group.json  pyproject.toml
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_remove_blog_is_published_blog_slug.py
blog/templates/blog/: blog_confirm_delete.html  (+4 more)
config/: settings.py  urls.py
mail/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
mail/migrations/: 0001_initial.py  0002_initial.py  0003_alter_client_options_alter_mailing_options_and_more.py  0004_alter_client_options_alter_mailing_options_and_more.py  0005_attempt_client_alter_attempt_attempt_date_and_more.py  0006_alter_mailing_regularity_alter_mailing_status.py  0007_alter_mailing_end_mailing_alter_mailing_message_and_more.py  0008_remove_mailing_end_mailing_and_more.py  0009_alter_mailing_end_time.py  0010_alter_mailing_end_time.py  0011_alter_mailing_end_time.py  0012_alter_mailing_end_time.py  0013_alter_mailing_end_time.py  0014_alter_mailing_end_time.py  0015_alter_mailing_end_time.py  0016_alter_mailing_end_time.py  0017_alter_mailing_end_time.py  0018_alter_mailing_end_time.py  0019_alter_mailing_end_time_logger.py  0020_alter_mailing_end_time.py  0021_alter_mailing_end_time_alter_mailing_next_date.py  0022_alter_mailing_end_time_alter_mailing_next_date.py
mail/templates/: base.html  contacts.html  home.html
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_is_verified.py  0003_alter_user_options.py  0004_remove_user_is_verified.py
(+21 files in other folders)
