[tool.poetry]
name = "course-work-6"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
pytils = "^0.4.1"
pytz = "^2024.1"
black = "^24.4.2"
redis = "^5.0.7"
django = "4.2"
django-redis = "^5.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
